--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,9 @@ spring.mail.password=gwip zugb mjps twkd
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-
+#twilio.account.sid=AC67191dacbfd9e8e16b0c2d79c1363cb5
+#twilio.auth.token=0ca6e7f8feaeee77549be7bc8e4b7dea
+#twilio.phone.number=+17818083714
 
 file.upload-dir=D:/userPhotos/
 
